--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
       <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body class=" h-[100vh] bg-gray-200 flex flex-col justify-center items-center">
-
+  <h1 class=" text-2xl font-bold"> Simple Calculator</h1>
+  <p class=" text-sm font-italics"><span class=" text-xl font-bold">Instruction:</span> Input numbers on both inout field and utilize the operators</p>
    
 
-    <div class="h-96 w-96 border-1  rounded-lg flex flex-col items-center justify-center">
+    <div class="h-96 w-96 border-1  rounded-lg flex flex-col items-center justify-center mt-10 shadow-2xl">
          <div id="message"></div>
         <div>
             <input id="firstNum" class="w-42 border-1 rounded-lg " >
