--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-      <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-</head>
-<body class=" h-[100vh] bg-gray-200 flex flex-col justify-center items-center">
-  <h1 class=" text-2xl font-bold"> Simple Calculator</h1>
-  <p class=" text-sm font-italics"><span class=" text-xl font-bold">Instruction:</span> Input numbers on both inout field and utilize the operators</p>
-   
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  </head>
+  <body class="h-[100vh] bg-gray-200 flex flex-col justify-center items-center">
+    <h1 class="text-2xl font-bold">Simple Calculator</h1>
+    <p class="text-sm font-italics">
+      <span class="text-xl font-bold">Instruction:</span> Input numbers on both
+      inout field and utilize the operators
+    </p>
 
-    <div class="h-96 w-96 border-1  rounded-lg flex flex-col items-center justify-center mt-10 shadow-2xl">
-         <div id="message"></div>
-        <div>
-            <input id="firstNum" class="w-42 border-1 rounded-lg " >
+    <div
+      class="h-96 w-96 border-1 rounded-lg flex flex-col items-center justify-center mt-10 shadow-2xl"
+    >
+      <div id="message"></div>
+      <div>
+        <input id="firstNum" class="w-42 border-1 rounded-lg" />
 
-        <input id="secondNum" class="w-42 border-1 rounded-lg " >
+        <input id="secondNum" class="w-42 border-1 rounded-lg" />
+      </div>
 
-        </div>
-        
-        <div class="mt-10">
-            <Button  id="add" class="border-1 bg-gray-100 w-10">+</Button>
-             <Button id="multiply" class="border-1 bg-gray-100 w-10">X</Button>
-              <Button id="divide" class="border-1 bg-gray-100 w-10">%</Button>
-              <Button id="Reset" class="border-1 bg-gray-100 w-10">C</Button>
-        </div>
+      <div class="mt-10 w-96 flex justify-center items-center gap-3">
+        <button id="add" class="border-1 bg-gray-100 w-10">+</button>
+        <button id="multiply" class="border-1 bg-gray-100 w-10">X</button>
+        <button id="divide" class="border-1 bg-gray-100 w-10">/</button>
+
+        <button id="Reset" class="border-1 bg-gray-100 w-10">C</button>
+      </div>
     </div>
-    
-
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
