--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <h1 class="text-2xl font-bold">Simple Calculator</h1>
     <p class="text-sm font-italics">
       <span class="text-xl font-bold">Instruction:</span> Input numbers on both
-      inout field and utilize the operators
+      input field  utilize the operators.
     </p>
 
     <div
-      class="h-96 w-96 border-1 rounded-lg flex flex-col items-center justify-center mt-10 shadow-2xl"
+      class="h-96 w-60 border-1 rounded-lg flex flex-col items-center justify-center mt-10 shadow-2xl"
     >
       <div id="message"></div>
-      <div>
-        <input id="firstNum" class="w-42 border-1 rounded-lg" />
+      <div class="flex justify-center items-center gap-1">
+        <input id="firstNum" class="w-24 border-1 rounded-lg" />
 
-        <input id="secondNum" class="w-42 border-1 rounded-lg" />
+        <input id="secondNum" class="w-24 border-1 rounded-lg" />
       </div>
 
       <div class="mt-10 w-96 flex justify-center items-center gap-3">
