--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="h-[100vh] bg-gray-200 flex flex-col justify-center items-center">
     <h1 class="text-2xl font-bold">Simple Calculator</h1>
     <p class="text-sm font-italics">
-      <span class="text-xl font-bold">Instruction:</span> Input numbers on both
+      <span class="text-xl font-bold">Instruction:</span> Input numbers on both <br>
       input field  utilize the operators.
     </p>
 
